     `battery.charge`, integrated with `status_commit()`, so all drivers
     should now report a `CHRG` or `DISCHRG` status, and verify whether
     reality agrees with a status reported by device/protocol (if any).
     This is also a step in direction of eventually providing a common
     `runtimecal` style fallback to all drivers. [issue #3146, PR #3156]
   * Introduced `NOTIFY_STATE_EXTEND_TIMEOUT` option and relevant variables
     for `upsnotify()` method, so we can tell systemd to not kill the service
     unit if its shutdown takes long (see also the `SHUTDOWNEXIT` option in
     the `upsmon` client). [issue #3003, PR #3151]
   * Daemons running with systemd integration tended to report "logged the
     systemd watchdog situation once, will not spam more about it" even if
     those "logged" messages were at an invisible verbosity level. [issue #3157,
     PR #3151]
   * Systemd units for some daemons were revised to honour the `MODE` setting
     from `nut.conf`, if available, to gracefully not-start when explicitly
     not-requested (e.g. do not start `upsd` in `MODE=netclient`), even though
     the unit is nominally enabled; this should make packaging and providing
     service pre-sets more simple. [issue #837, PR #3233]
   * Fixed thread-safety of IP address printout in `libupsclient` method
     `upscli_tryconnect()` (practical bug seen in `nut-scanner` parallel scans).
     [issue #3234]
   * The `upsdrvquery` code base was revised to handle SIGPIPE without crashing
     (if the consumers did not neuter the signal themselves), although this
     behavior is optional by `upsdrvquery_NOSIGPIPE`.
     Separated an `upsdrvquery_ping()` operation from earlier code, so it can
     be directly used by consumers (in-tree this is drivers and `upsdrvctl`).
     [issue #3276, PR #3277]
   * Revised `void*` pointer casting into specific types for values returned
     by `xmalloc()` and friends, or iterated in loops via `something->next`,