@@ -31,7 +31,7 @@
 #endif
 
 #define DRIVER_NAME	"NUT Generic Modbus driver (libmodbus link type: " NUT_MODBUS_LINKTYPE_STR ")"
-#define DRIVER_VERSION	"0.09"
+#define DRIVER_VERSION	"0.10"
 
 /* variables */
 static modbus_t *mbctx = NULL;                             /* modbus memory context */
@@ -68,9 +68,6 @@ int upscmd(const char *cmd, const char *arg);
 
 /* read signal status */
 int get_signal_state(devstate_t state);
-
-/* count the time elapsed since start */
-long time_elapsed(struct timeval *start);
 
 int register_write(modbus_t *mb, int addr, regtype_t type, void *data);
 
@@ -543,31 +540,6 @@ int register_write(modbus_t *mb, int addr, regtype_t type, void *data)
 	return rval;
 }
 
-/* returns the time elapsed since start in milliseconds */
-long time_elapsed(struct timeval *start)
-{
-	long rval;
-	struct timeval end;
-
-	rval = gettimeofday(&end, NULL);
-	if (rval < 0) {
-		upslog_with_errno(LOG_ERR, "time_elapsed");
-	}
-	if (start->tv_usec < end.tv_usec) {
-		suseconds_t nsec = (end.tv_usec - start->tv_usec) / 1000000 + 1;
-		end.tv_usec -= 1000000 * nsec;
-		end.tv_sec += nsec;
-	}
-	if (start->tv_usec - end.tv_usec > 1000000) {
-		suseconds_t nsec = (start->tv_usec - end.tv_usec) / 1000000;
-		end.tv_usec += 1000000 * nsec;
-		end.tv_sec -= nsec;
-	}
-	rval = (end.tv_sec - start->tv_sec) * 1000 + (end.tv_usec - start->tv_usec) / 1000;
-
-	return rval;
-}
-
 /* instant command triggered by upsd */
 int upscmd(const char *cmd, const char *arg)
 {
@@ -611,7 +583,7 @@ int upscmd(const char *cmd, const char *arg)
 				}
 
 				/* wait for FSD_pulse_duration ms */
-				while ((etime = time_elapsed(&start)) < FSD_pulse_duration);
+				while ((etime = elapsed_since_timeval(&start)) < FSD_pulse_duration);
 
 				data = 0 ^ sigar[FSD_T].noro;
 				rval = register_write(mbctx, sigar[FSD_T].addr, sigar[FSD_T].type, &data);
@@ -654,7 +626,7 @@ int upscmd(const char *cmd, const char *arg)
 			}
 
 			/* wait for an increasing time interval before sending shutdown command */
-			while ((etime = time_elapsed(&start)) < ( FSD_REPEAT_INTRV / cnt));
+			while ((etime = elapsed_since_timeval(&start)) < ( FSD_REPEAT_INTRV / cnt));
 			upsdebugx(2,"ERROR: load.off failed, wait for %lims, retries left: %d\n", etime, cnt - 1);
 			cnt--;
 		}
